--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -19,6 +19,12 @@ ja:
     email: E-メール
     site: ウェブサイト
     comment: コメント
+    under_review: 'Your comment is under review. Please be <br />patient and DO NOT submit it again.'
+    mark_as_spam: スパム
+    mark_as_ham: スパムじゃない
+    spam_deleted: "All spam deleted."
+    confirm_abs: "It's a DANGEROUS operation, ARE YOU ABSOLUTELY SURE???"
+    delete_all_spams: Delete all spam
   layout:
     admin: 管理
     edit_info: 設定の変更
