--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -58,7 +58,7 @@ ja:
     tip: If you don't want to change your password, leave it blank.
   helper:
     blog: "中国でIT企業を経営している天狗の日々"
-    subtitle: "このBlogには、中国の片田舎でRailsやスマートフォン開発の企業を経営している<br />鹿児島出身の田舎もの（でもMBA）が、格闘している日々を記しています。"
+    subtitle: "このBlogには、中国の片田舎でRailsやスマートフォン開発の企業を経営していたり、<br> 採用・人事コンサル、メルマガの発行管理、はたまたウイルス診断技術の事業開発など、<br>いろいろな事業に取り組んでいる天狗が、主に好きな中国ドラマについて、適当に書いています。<br>皆様からのコメお待ちしています。"
   controller:
     not_allow: You are not allowed to do this.
     created: Post was successfully created.
